--- a/hw02/Vagrantfile
+++ b/hw02/Vagrantfile
@@ -11,6 +11,8 @@ if not Pathname(myRoot + "/" + CONFIG_FILE).exist?
 end
 
 vagrantCfg=YAML.load_file(myRoot + "/" + CONFIG_FILE)
+node_cpus=vagrantCfg['global']['cpus']||1
+node_mem=vagrantCfg['global']['mem']||1024
 
 node_ip_pattern=vagrantCfg['global']['ip_pattern']||'192.168.254.'
 
@@ -20,13 +22,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     box_count=0
 
-    #obtain boxes count
     vagrantCfg['boxes'].each do |boxName, boxCfg|
         box_count+=1
     end    
 
-    #make host list - to put into /etc/hosts
     hostList=Hash.new
+
     vagrantCfg['boxes'].each do |boxName, boxCfg|
         host_name=boxName#+'.local'
         host_ip="#{node_ip_pattern}%d" % box_number
@@ -34,49 +35,41 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         box_number+=1
     end    
 
-    #do with each box in yml
     vagrantCfg['boxes'].each do |boxName, boxCfg|
         box_name=boxName
         host_name=hostList[boxName]['host']
         host_ip=hostList[boxName]['ip']
         bx=boxCfg['box']
-
-        #define box and setup some props
         config.vm.define box_name do |box|
+
             box.vm.box=bx['box']
             box.vm.hostname=host_name
             box.vm.network :private_network, ip: host_ip
 
-            #setup HW props of provide
-            node_cpus=bx['cpus']||1
-            node_mem=bx['mem']||256
-            box.vm.provider "virtualbox" do |vbox|
-                vbox.memory=node_mem
-                vbox.cpus=node_cpus
-                if bx.key?('vdi_file')                
-                    unless File.exist?(bx['vdi_file'])
-                        puts "add sata 2nd time #{box_name}"
-                        vbox.customize ['createmedium', '--filename', bx['vdi_file'], '--size', bx['vdi_size'] * 1024]
-                        vbox.customize ["storagectl", :id, "--name", "SATA Controller", "--add", "sata" ]
-                        vbox.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium',  bx['vdi_file']]
-                    end  
-                end
+            if bx.key?('newdisk_path')                
+                box.newdisk.path = bx['newdisk_path'] 
+                box.newdisk.size = bx['newdisk_size'] * 1024 # size in megabytes
             end
 
-            #provision with bootstrap.sh shell script
-            #box.vm.provision "shell", path: "bootstrap.sh", privileged: true, args: "#{bx['default_root']}"
-            box.vm.provision "ansible" do |ansible|
-                ansible.playbook="ansible/bootstrap.yml"
-                ansible.become=true
-            end    
-
-            #provision with hosts plugin - add all hosts from list to /etc/hosts
+            if bx.key?('provision')                
+                box.vm.provision "ansible" do |ansible|
+                    ansible.playbook = bx['provision'] 
+                end    
+            end
+            
             box.vm.provision :hosts do |hosts|
                 hostList.each do |host_name, host_item|
                     hosts.add_host host_item['ip'], [host_item['host']]
                 end
-            end                    
+            end        
+
+
+            box.vm.provider "virtualbox" do |vbox|
+                vbox.memory=node_mem
+                vbox.cpus=node_cpus
+            end
         end
     end
+    
 end                
 
