--- a/hw02/boxes_config.yml
+++ b/hw02/boxes_config.yml
@@ -1,25 +1,28 @@
+
 global:
+    cpus: 2
+    mem: 2048
     ip_pattern: '192.168.99.10'
+
 boxes:
-    nodevictim:
+    nodeCent:
         box:
             box: 'centos/7'
-            default_root: 'vagrant'
+            default_root: 'vagrant' 
+            newdisk_path: './bootstrap/disk.vdi'
+            newdisk_size: 1 #GB
+            provision: "./bootstrap/cent/bootstrap.yml"
 
-            cpus: 1
-            mem: 256
-            vdi_file: './sata_v.vdi'
-            vdi_size: 5
-
-    nodeintruder:
+    nodeUbu:
         box:
-            box: 'kalilinux/rolling'
-            default_root: 'kali'
-
-            cpus: 2
-            mem: 2048
-#            vdi_file: './sata_i.vdi'
-#            vdi_size: 500
+            box: 'ubuntu/bionic64'
+            default_root: 'vagrant' 
+            provision: "./bootstrap/ubu/bootstrap.yaml"
+        
+    # nodeintruder:
+    #     box:
+    #         box: 'kalilinux/rolling'
+    #         default_root: 'kali'
 
 
         
