--- a/hw02/bootstrap/cent/udisk_policy.yaml
+++ b/hw02/bootstrap/cent/udisk_policy.yaml
@@ -5,19 +5,26 @@
     name: udisks2
     state: latest
 
-- name: check if /dev/sdb1 exists create partition if not exists
-  become: yes
+
+- name: check if /dev/sdb exists
+  parted:
+    device: /dev/sdb
+    unit: MiB
+  register: sdb_info
+
+- name: create partition if not exists
   parted: 
     device: /dev/sdb
     number: 1
     state: present
   when: sdb_info.partitions[0] is not defined
-  register: sdb_info
-  
-- name: Create a ext4 filesystem on /dev/sdb1 and check disk blocks
+
+- name: create filesystem on /dev/sdb1
   filesystem:
-    fstype: ext4
+    fstype: ext3 
     dev: /dev/sdb1
+    force: yes
+
 
 - name: Copy mount rule
   copy:
