--- a/hw04/boxes_config.yml
+++ b/hw04/boxes_config.yml
@@ -1,16 +1,30 @@
 
 global:
-    cpus: 2
-    mem: 2048
-    ip_pattern: '192.168.99.10'
+    ip_pattern: '192.168.100.10'
+    store: '10'
+    provider: 'vmware' #'vbox'
+    esxi_hostname: 'ip.or.host.fqdn'
+    esxi_username: 'someuser'
+    esxi_password: 'somepass'
+
+
 
 boxes:
 
-    nodeUbu:
+    nodeDoc18:
         box:
-            box: 'ubuntu/bionic64'
-            default_root: 'vagrant' 
-            provision: "./bootstrap/ubu/bootstrap.yaml"
-        
+            box: 'bento/ubuntu-18.04'
+            cpus: '4'
+            mem: '4096'
+            provision: ./ansible/nodebuntu/bootstrap.yml
+
+    # nodeDoc19:
+    #     box:
+    #         box: 'bento/ubuntu-19.10'
+    #         cpus: '4'
+    #         mem: '4096'
+    #         provision: ./ansible/nodebuntu/bootstrap.yml
+    #         disk_path: './sata.vdi'
+
 
         
