--- a/hw04/nodeDoc/bootstrap.yml
+++ b/hw04/nodeDoc/bootstrap.yml
@@ -24,7 +24,7 @@
 
   tasks:
     - include: ../dep_task/deployServApp.yml
-    - include: ../dep_task/auditChecks.yaml
+    # - include: ../dep_task/auditChecks.yaml
   
 
 
