--- a/hw04/nodeDoc/roles/setup-hardening-for-cis-benchmarks/tasks/06-dl-docker-bench-security+trivy.yml
+++ b/hw04/nodeDoc/roles/setup-hardening-for-cis-benchmarks/tasks/06-dl-docker-bench-security+trivy.yml
@@ -21,7 +21,7 @@
   copy:
       src: trivy/trivy0.5.3.deb
       dest: ~/trivy.deb
-  when: trivy_downloaded=0    
+  when: trivy_downloaded==0
         
   
 - name: setup trivy
